fixed bugs with ws
